Simplify privacy provider, display version

--- a/res/layout/xsettings.xml
+++ b/res/layout/xsettings.xml
@@ -22,7 +22,8 @@
         android:paddingLeft="6dip"
         android:paddingTop="6dip"
         android:text="This application has no internet access"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textIsSelectable="false" />
 
     <ListView
         android:id="@+id/lvPrivacy"
