--- a/res/layout/xsettings.xml
+++ b/res/layout/xsettings.xml
@@ -25,6 +25,26 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="6dip"
+        android:paddingLeft="6dip"
+        android:paddingTop="6dip"
+        android:text="Bold: permission used"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textIsSelectable="false" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="6dip"
+        android:paddingLeft="6dip"
+        android:paddingTop="6dip"
+        android:text="Gray: permission not granted"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textIsSelectable="false" />
+
     <ListView
         android:id="@+id/lvPrivacy"
         android:layout_width="match_parent"
