--- a/res/layout/xsettings.xml
+++ b/res/layout/xsettings.xml
@@ -6,22 +6,36 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/tvTitle"
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="6dip"
         android:layout_marginTop="8dip"
-        android:text="Privacy"
+        android:text="@string/app_name"
         android:textIsSelectable="false" />
 
     <TextView
         android:id="@+id/tvInternet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="6dip"
         android:paddingLeft="6dip"
-        android:paddingTop="6dip"
-        android:text="This application has no internet access"
+        android:text="@string/settings_internet"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textIsSelectable="false" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="6dip"
+        android:text="@string/settings_permused"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textIsSelectable="false" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="6dip"
+        android:text="@string/settings_permgranted"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" />
 
@@ -30,19 +44,8 @@
         android:layout_height="wrap_content"
         android:paddingBottom="6dip"
         android:paddingLeft="6dip"
-        android:paddingTop="6dip"
-        android:text="Bold: permission used"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textIsSelectable="false" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="6dip"
-        android:paddingLeft="6dip"
-        android:paddingTop="6dip"
-        android:text="Gray: permission not granted"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/settings_restrict"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textIsSelectable="false" />
 
     <ListView
