--- a/res/layout/xappentry.xml
+++ b/res/layout/xappentry.xml
@@ -8,6 +8,7 @@
         android:id="@+id/imgAppEntryIcon"
         android:layout_width="?android:attr/listPreferredItemHeight"
         android:layout_height="?android:attr/listPreferredItemHeight"
+        android:contentDescription="@string/settings_icon"
         android:gravity="center_vertical" />
 
     <CheckedTextView
@@ -18,6 +19,6 @@
         android:gravity="center_vertical"
         android:paddingLeft="8dip"
         android:paddingRight="8dip"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
