--- a/res/layout/xappsettings.xml
+++ b/res/layout/xappsettings.xml
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="6dip"
-        android:text="@string/settings_permused"
+        android:text="@string/settings_restrictionused"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" />
 
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="6dip"
-        android:text="@string/settings_permgranted"
+        android:text="@string/settings_permnotgranted"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" />
 
@@ -51,7 +51,7 @@
         android:textIsSelectable="false" />
 
     <ListView
-        android:id="@+id/lvPermission"
+        android:id="@+id/lvRestriction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:choiceMode="multipleChoice" />
