--- a/res/layout/xbatchedit.xml
+++ b/res/layout/xbatchedit.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/tvPermission"
+        android:id="@+id/tvRestriction"
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="6dip"
-        android:text="@string/settings_permused"
+        android:text="@string/settings_restrictionused"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" />
 
