First attempt to restrict audio recording

--- a/res/menu/xmain.xml
+++ b/res/menu/xmain.xml
@@ -9,7 +9,10 @@
             <item
                 android:id="@+id/menu_capvideo"
                 android:title="@string/menu_capvideo"/>
-        </menu>
+            <item
+                android:id="@+id/menu_recordmic"
+                android:title="@string/menu_recordmic"/>
+            </menu>
     </item>
 
 </menu>
