--- a/res/menu/xmain.xml
+++ b/res/menu/xmain.xml
@@ -10,6 +10,9 @@
                 android:id="@+id/menu_capvideo"
                 android:title="@string/menu_capvideo"/>
             <item
+                android:id="@+id/menu_recordvideo"
+                android:title="@string/menu_recordvideo"/>
+            <item
                 android:id="@+id/menu_recordmic"
                 android:title="@string/menu_recordmic"/>
             <item
