Fix main initial scroll position

--- a/res/layout/xmain.xml
+++ b/res/layout/xmain.xml
@@ -50,7 +50,6 @@
         android:id="@+id/lvRestriction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:choiceMode="singleChoice"
-        android:stackFromBottom="true" />
+        android:choiceMode="singleChoice" />
 
 </LinearLayout>
