--- a/res/layout/xappentry.xml
+++ b/res/layout/xappentry.xml
@@ -1,32 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/imgAppEntryGranted"
-            android:layout_width="16dip"
-            android:layout_height="16dip"
-            android:layout_marginLeft="2dip"
-            android:layout_marginRight="2dip"
+            android:layout_width="24dip"
+            android:layout_height="24dip"
             android:contentDescription="@string/settings_icon"
-            android:gravity="center_vertical"
             android:src="@drawable/granted" />
 
         <ImageView
             android:id="@+id/imgAppEntryUsed"
-            android:layout_width="16dip"
-            android:layout_height="16dip"
-            android:layout_marginLeft="2dip"
-            android:layout_marginRight="2dip"
+            android:layout_width="24dip"
+            android:layout_height="24dip"
             android:contentDescription="@string/settings_icon"
-            android:gravity="center_vertical"
             android:src="@drawable/used" />
     </LinearLayout>
 
