--- a/res/layout/xappedit.xml
+++ b/res/layout/xappedit.xml
@@ -26,8 +26,8 @@
 
         <ImageView
             android:id="@+id/imgAppEntryInternet"
-            android:layout_width="?android:attr/listPreferredItemHeightSmall"
-            android:layout_height="?android:attr/listPreferredItemHeightSmall"
+            android:layout_width="24dip"
+            android:layout_height="24dip"
             android:contentDescription="@string/settings_icon"
             android:src="@drawable/internet" />
     </LinearLayout>
