--- a/res/layout/xapplist.xml
+++ b/res/layout/xapplist.xml
@@ -5,25 +5,38 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/tvRestriction"
+        android:id="@+id/tvApp"
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dip"
         android:layout_marginTop="8dip"
+        android:drawableRight="@drawable/help"
         android:textIsSelectable="false" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/imgAppEntryIcon"
+            android:layout_width="?android:attr/listPreferredItemHeightSmall"
+            android:layout_height="?android:attr/listPreferredItemHeightSmall"
+            android:contentDescription="@string/settings_icon" />
+
+        <ImageView
+            android:id="@+id/imgAppEntryInternet"
+            android:layout_width="24dip"
+            android:layout_height="24dip"
+            android:contentDescription="@string/settings_icon"
+            android:src="@drawable/internet" />
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="6dip"
-        android:text="@string/settings_longpress"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textIsSelectable="false" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="6dip"
         android:paddingBottom="6dip"
         android:paddingLeft="6dip"
         android:text="@string/settings_restrict"
@@ -31,7 +44,7 @@
         android:textIsSelectable="false" />
 
     <ListView
-        android:id="@+id/lvApp"
+        android:id="@+id/lvRestriction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:choiceMode="multipleChoice" />
