--- a/res/layout/xapplist.xml
+++ b/res/layout/xapplist.xml
@@ -2,21 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <TextView
         android:id="@+id/tvApp"
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="6dip"
-        android:layout_marginTop="8dip"
         android:drawableRight="@drawable/help"
         android:textIsSelectable="false" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="6dip"
         android:orientation="horizontal" >
 
         <ImageView
@@ -37,8 +40,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dip"
-        android:paddingBottom="6dip"
-        android:paddingLeft="6dip"
         android:text="@string/settings_restrict"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textIsSelectable="false" />
@@ -47,6 +48,7 @@
         android:id="@+id/lvRestriction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="6dip"
         android:choiceMode="multipleChoice" />
 
 </LinearLayout>
