--- a/res/layout/xhelp.xml
+++ b/res/layout/xhelp.xml
@@ -2,12 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/used"
+        android:drawablePadding="6dip"
         android:gravity="center_vertical"
         android:text="@string/help_used"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -17,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/internet"
+        android:drawablePadding="6dip"
         android:gravity="center_vertical"
         android:text="@string/help_internet"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -26,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/granted"
+        android:drawablePadding="6dip"
         android:gravity="center_vertical"
         android:text="@string/help_granted"
         android:textAppearance="?android:attr/textAppearanceMedium"
