--- a/res/layout/xappbutton.xml
+++ b/res/layout/xappbutton.xml
@@ -5,20 +5,11 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <TextView
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dip"
-        android:text="@string/app_name"
-        android:textIsSelectable="false" />
-
     <Button
         android:id="@+id/btnXPrivacy"
         android:layout_width="200dip"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginTop="6dip"
+        android:drawableStart="@drawable/ic_launcher"
         android:text="@string/app_name" />
 
 </LinearLayout>
