--- a/res/layout/xbatchlist.xml
+++ b/res/layout/xbatchlist.xml
@@ -24,6 +24,16 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textIsSelectable="false" />
 
+    <ProgressBar
+        android:id="@+id/pbApp"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="50dip"
+        android:layout_height="50dip"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dip"
+        android:indeterminate="true"
+        android:visibility="gone" />
+
     <ListView
         android:id="@+id/lvApp"
         android:layout_width="match_parent"
