--- a/res/menu/xmain.xml
+++ b/res/menu/xmain.xml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/menu_settings"
+        android:title="@string/menu_settings"/>
+    <item
         android:id="@+id/menu_report"
         android:title="@string/menu_report"/>
     <item
