--- a/res/layout/xsingleappentry.xml
+++ b/res/layout/xsingleappentry.xml
@@ -4,35 +4,35 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/imgAppEntryIcon"
-        android:layout_width="?android:attr/listPreferredItemHeightSmall"
-        android:layout_height="?android:attr/listPreferredItemHeightSmall"
-        android:contentDescription="@string/help_icon" />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:paddingLeft="4dip" >
+        android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/imgAppEntryInternet"
+            android:id="@+id/imgAppEntryUsed"
             android:layout_width="24dip"
             android:layout_height="24dip"
-            android:contentDescription="@string/help_internet"
-            android:src="@drawable/internet" />
+            android:contentDescription="@string/help_used"
+            android:src="@drawable/used" />
+
+        <ImageView
+            android:id="@+id/imgAppEntryGranted"
+            android:layout_width="24dip"
+            android:layout_height="24dip"
+            android:contentDescription="@string/help_granted"
+            android:src="@drawable/granted" />
     </LinearLayout>
 
-    <TextView
+    <CheckedTextView
         android:id="@+id/tvAppEntryName"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/listPreferredItemHeightSmall"
+        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
         android:gravity="center_vertical"
         android:paddingLeft="8dip"
         android:paddingRight="8dip"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textIsSelectable="false" />
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
