Add slide left/right icon

--- a/res/layout/xfragrestriction.xml
+++ b/res/layout/xfragrestriction.xml
@@ -13,6 +13,7 @@
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawableRight="@drawable/exchange"
         android:text="@string/app_restriction"
         android:textIsSelectable="false" />
 
