--- a/res/menu/xmain.xml
+++ b/res/menu/xmain.xml
@@ -14,6 +14,9 @@
         android:id="@+id/menu_import"
         android:title="@string/menu_import"/>
     <item
+        android:id="@+id/menu_pro"
+        android:title="@string/menu_pro"/>
+    <item
         android:id="@+id/menu_about"
         android:title="@string/menu_about"/>
 
