--- a/res/layout/xsettings.xml
+++ b/res/layout/xsettings.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/etLat"
                 android:layout_width="100dip"
                 android:layout_height="wrap_content"
-                android:digits="-+0123456789.,"
+                android:digits="-0123456789.,"
                 android:inputType="number" />
         </TableRow>
 
@@ -51,7 +51,7 @@
                 android:id="@+id/etLon"
                 android:layout_width="100dip"
                 android:layout_height="wrap_content"
-                android:digits="-+0123456789.,"
+                android:digits="-0123456789.,"
                 android:inputType="number" />
         </TableRow>
     </TableLayout>
