--- a/res/layout/xrestrictionlist.xml
+++ b/res/layout/xrestrictionlist.xml
@@ -9,12 +9,32 @@
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <TextView
-        android:id="@+id/tvRestriction"
+        android:id="@+id/tvApp"
         style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableRight="@drawable/help"
         android:textIsSelectable="false" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dip"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/imgAppEntryIcon"
+            android:layout_width="?android:attr/listPreferredItemHeightSmall"
+            android:layout_height="?android:attr/listPreferredItemHeightSmall"
+            android:contentDescription="@string/help_application" />
+
+        <ImageView
+            android:id="@+id/imgAppEntryInternet"
+            android:layout_width="24dip"
+            android:layout_height="24dip"
+            android:contentDescription="@string/help_internet"
+            android:src="@drawable/internet" />
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -24,18 +44,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textIsSelectable="false" />
 
-    <ProgressBar
-        android:id="@+id/pbApp"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="50dip"
-        android:layout_height="50dip"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dip"
-        android:indeterminate="true"
-        android:visibility="gone" />
-
     <ListView
-        android:id="@+id/lvApp"
+        android:id="@+id/lvRestriction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dip"
