--- a/res/layout/xmainentry.xml
+++ b/res/layout/xmainentry.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal" >
 
     <ImageView
-        android:id="@+id/imgEntryIcon"
+        android:id="@+id/imgIcon"
         android:layout_width="?android:attr/listPreferredItemHeightSmall"
         android:layout_height="?android:attr/listPreferredItemHeightSmall"
         android:contentDescription="@string/help_application" />
@@ -18,14 +18,14 @@
         android:paddingLeft="4dip" >
 
         <ImageView
-            android:id="@+id/imgEntryUsed"
+            android:id="@+id/imgUsed"
             android:layout_width="24dip"
             android:layout_height="24dip"
             android:contentDescription="@string/help_used"
             android:src="@drawable/used" />
 
         <ImageView
-            android:id="@+id/imgEntryInternet"
+            android:id="@+id/imgInternet"
             android:layout_width="24dip"
             android:layout_height="24dip"
             android:contentDescription="@string/help_internet"
@@ -33,7 +33,7 @@
     </LinearLayout>
 
     <CheckedTextView
-        android:id="@+id/tvEntryName"
+        android:id="@+id/ctvName"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/listPreferredItemHeightSmall"
         android:checkMark="?android:attr/listChoiceIndicatorMultiple"
