--- a/res/layout/xrestrictionlist.xml
+++ b/res/layout/xrestrictionlist.xml
@@ -22,18 +22,59 @@
         android:layout_marginTop="6dip"
         android:orientation="horizontal" >
 
-        <ImageView
-            android:id="@+id/imgAppEntryIcon"
-            android:layout_width="?android:attr/listPreferredItemHeightSmall"
-            android:layout_height="?android:attr/listPreferredItemHeightSmall"
-            android:contentDescription="@string/help_application" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
-        <ImageView
-            android:id="@+id/imgAppEntryInternet"
-            android:layout_width="24dip"
-            android:layout_height="24dip"
-            android:contentDescription="@string/help_internet"
-            android:src="@drawable/internet" />
+            <ImageView
+                android:id="@+id/imgAppEntryIcon"
+                android:layout_width="?android:attr/listPreferredItemHeightSmall"
+                android:layout_height="?android:attr/listPreferredItemHeightSmall"
+                android:contentDescription="@string/help_application" />
+
+            <ImageView
+                android:id="@+id/imgAppEntryInternet"
+                android:layout_width="24dip"
+                android:layout_height="24dip"
+                android:contentDescription="@string/help_internet"
+                android:src="@drawable/internet" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dip"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/tvVersion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textIsSelectable="false" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/tvPackageName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dip"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textIsSelectable="false" />
+
+                <TextView
+                    android:id="@+id/tvUid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textIsSelectable="false" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <TextView
