--- a/res/layout/xrestrictionchild.xml
+++ b/res/layout/xrestrictionchild.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingLeft="80dip" >
+
+    <!-- 32 + 24 + 24 -->
 
     <CheckedTextView
         android:id="@+id/ctvMethodName"
