Do not wrap package version and name

--- a/res/layout/xrestrictionlist.xml
+++ b/res/layout/xrestrictionlist.xml
@@ -51,29 +51,17 @@
                 android:id="@+id/tvVersion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textIsSelectable="false" />
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tvPackageName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/tvPackageName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textIsSelectable="false" />
-
-                <TextView
-                    android:id="@+id/tvUid"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dip"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textIsSelectable="false" />
-            </LinearLayout>
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textIsSelectable="false" />
         </LinearLayout>
     </LinearLayout>
 
