--- a/res/layout/xrestrictionentry.xml
+++ b/res/layout/xrestrictionentry.xml
@@ -2,14 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="32dip"
     android:orientation="horizontal" >
+
+    <ImageView
+        android:id="@+id/imgIndicator"
+        android:layout_width="12dip"
+        android:layout_height="12dip"
+        android:layout_gravity="center_vertical"
+        android:contentDescription="@string/app_name"
+        android:src="@android:drawable/arrow_down_float" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:paddingLeft="6dip" >
 
         <ImageView
             android:id="@+id/imgUsed"
@@ -32,8 +40,8 @@
         android:layout_height="?android:attr/listPreferredItemHeightSmall"
         android:checkMark="?android:attr/listChoiceIndicatorMultiple"
         android:gravity="center_vertical"
-        android:paddingLeft="8dip"
-        android:paddingRight="8dip"
+        android:paddingLeft="6dip"
+        android:paddingRight="6dip"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
