Add category title

--- a/res/layout/xrestrictionlist.xml
+++ b/res/layout/xrestrictionlist.xml
@@ -69,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dip"
-        android:text="@string/settings_restrict"
+        android:text="@string/title_restrict"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" />
 
