--- a/res/layout/xrestrictionlist.xml
+++ b/res/layout/xrestrictionlist.xml
@@ -17,6 +17,7 @@
         android:textIsSelectable="false" />
 
     <LinearLayout
+        android:id="@+id/llInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dip"
