Toggling expert: refresh list, application search/filter

--- a/res/layout/xmainlist.xml
+++ b/res/layout/xmainlist.xml
@@ -34,12 +34,26 @@
             android:src="@drawable/help" />
     </LinearLayout>
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_restrict"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textIsSelectable="false" />
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_restrict"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textIsSelectable="false" />
+
+        <EditText
+            android:id="@+id/etFilter"
+            android:layout_width="150dip"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:inputType="textNoSuggestions"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </RelativeLayout>
 
     <ProgressBar
         android:id="@+id/pbApp"
@@ -56,6 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dip"
-        android:choiceMode="multipleChoice" />
+        android:choiceMode="multipleChoice"
+        android:visibility="gone" />
 
 </LinearLayout>
