--- a/res/layout/xmainentry.xml
+++ b/res/layout/xmainentry.xml
@@ -4,11 +4,27 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/imgIcon"
-        android:layout_width="?android:attr/listPreferredItemHeightSmall"
-        android:layout_height="?android:attr/listPreferredItemHeightSmall"
-        android:contentDescription="@string/help_application" />
+    <LinearLayout
+        android:id="@+id/llIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:layout_width="24dip"
+            android:layout_height="24dip"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/help_application"
+            android:paddingLeft="6dip"
+            android:src="@drawable/edit_query" />
+
+        <ImageView
+            android:id="@+id/imgIcon"
+            android:layout_width="?android:attr/listPreferredItemHeightSmall"
+            android:layout_height="?android:attr/listPreferredItemHeightSmall"
+            android:contentDescription="@string/help_application"
+            android:paddingLeft="6dip" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
