--- a/res/layout/xmainlist.xml
+++ b/res/layout/xmainlist.xml
@@ -73,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="6dip"
         android:choiceMode="multipleChoice"
+        android:fastScrollEnabled="true"
         android:visibility="gone" />
 
 </LinearLayout>
