--- a/res/menu/xapp.xml
+++ b/res/menu/xapp.xml
@@ -4,5 +4,11 @@
     <item
         android:id="@+id/menu_all"
         android:title="@string/menu_all"/>
+    <item android:id="@+id/menu_app_launch"
+        android:title="@string/menu_app_launch" />
+    <item android:id="@+id/menu_app_settings"
+        android:title="@string/menu_app_settings" />
+    <item android:id="@+id/menu_app_store"
+        android:title="@string/menu_app_store" />
 
 </menu>
